--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Calcolatore Canone Concordato Firenze" />
+    <meta name="description" content="Scopri gli affitti a canone concordato per Firenze. Una calcolatrice gratuita e semplice da usare per stimare tasse e guadagno netto." />
+
+    <!-- Open Graph / Facebook / WhatsApp -->
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://nonholamilza.github.io/Calcolatore-Canone-Concordato-Firenze/" />
+      <meta property="og:title" content="Calcolatore Canone Concordato Firenze" />
+      <meta property="og:description" content="Scopri gli affitti a canone concordato per Firenze. Una calcolatrice gratuita e semplice da usare per stimare tasse e guadagno netto." />
+      <meta property="og:image" content="https://nonholamilza.github.io/Calcolatore-Canone-Concordato-Firenze/anteprima.jpg" />
+    
+    <!-- Twitter -->
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:url" content="https://nonholamilza.github.io/Calcolatore-Canone-Concordato-Firenze/" />
+      <meta name="twitter:title" content="Calcolatore Canone Concordato Firenze" />
+      <meta name="twitter:description" content="Scopri gli affitti a canone concordato per Firenze. Una calcolatrice gratuita e semplice da usare per stimare tasse e guadagno netto." />
+      <meta name="twitter:image" content="https://nonholamilza.github.io/Calcolatore-Canone-Concordato-Firenze/anteprima.jpg" />
+
     <title>Calcolatore Canone Concordato Firenze</title>
     <style>
         * {
