--- a/index.html
+++ b/index.html
@@ -571,6 +571,56 @@
             </div>
         </div>
     </div>
+    
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h4>📋 Riferimenti Normativi</h4>
+                <p>Calcoli sui parametri stabiliti dall'<a target="_blank" rel="noopener noreferrer" href="https://sociale.comune.fi.it/system/files/2025-07/Accorro%20territoriale%20Firenze%20e%20comuni%20limitrofi%20sottoscritto%20il%2003.07.2025%20e%20valido%20dal%2007.07.2025_250704_105950.pdf">Accordo Territoriale sulle locazioni abitative</a> del 03/07/2025 e dalle <a target="_blank" rel="noopener noreferrer" href="https://www.comune.firenze.it/novita/notizie/nuovi-accordi-territoriali-sulle-locazioni-abitative">agevolazioni IMU</a> del comune di Firenze.</p>
+            </div>
+
+            <div class="footer-grid">
+                <div class="footer-section">
+                    <h4>🏠 Organizzazioni Sindacali Inquilini</h4>
+                    <p class="organization-list">
+                        <a target="_blank" rel="noopener noreferrer" href="https://www.sunia.it/">SUNIA</a> • <a target="_blank" rel="noopener noreferrer" href="https://www.sicet.it/">SICET</a> • <a target="_blank" rel="noopener noreferrer" href="https://uiltoscana.it/uniat/">UNIAT</a> • <a target="_blank" rel="noopener noreferrer" href="https://www.unioneinquilini.it/?sedi=firenze">UNIONE INQUILINI</a> • <a target="_blank" rel="noopener noreferrer" href="https://www.google.com/search?q=CONIA+%E2%80%93+FENAPI+Firenze%2C+via+Sant%27Angelo+17%2C+Firenze&oq=CONIA+%E2%80%93+FENAPI+Firenze%2C+via+Sant%27Angelo+17%2C+Firenze&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIGCAEQLhhA0gEHMjQ1ajBqOagCALACAQ&sourceid=chrome&ie=UTF-8">CONIA</a>
+                    </p>
+                </div>
+
+                <div class="footer-section">
+                    <h4>🏢 Associazioni Proprietari Immobiliari</h4>
+                    <p class="organization-list">
+                        <a target="_blank" rel="noopener noreferrer" href="http://www.appcfirenze.it/web/">APPC</a> • <a target="_blank" rel="noopener noreferrer" href="https://www.google.com/search?q=ASPPI+Firenze">ASPPI</a> • <a target="_blank" rel="noopener noreferrer" href="https://www.google.com/search?q=CONFABITARE+firenze">CONFABITARE</a> • <a target="_blank" rel="noopener noreferrer" href="https://sociale.comune.fi.it/system/files/2025-02/Adesione%20Firenze.pdf">CONFAPPI</a> • <a target="_blank" rel="noopener noreferrer" href="https://www.confediliziafirenze.it/">CONFEDILIZIA</a> • <a target="_blank" rel="noopener noreferrer" href="http://www.uppifirenze.it/">UPPI Area Metropolitana Fiorentina</a> • <a target="_blank" rel="noopener noreferrer" href="https://uppi.it/sede/">UPPI Delegazioni Provinciali</a>
+                    </p>
+                </div>
+            </div>
+
+            <div class="footer-section">
+                <h4>⚖️ Informazioni Legali e Sviluppo</h4>
+                <p>
+                    Sviluppato da <strong>nonholamilza</strong> grazie a <strong>Claude LLM</strong>. 
+                    Nessun dato o informazione sull'individuo viene raccolto, nessun dato viene utilizzato a fini commerciali.
+                    <span class="license-badge">GNU v3.0</span>
+                </p>
+                
+                <div class="footer-links">
+                    <a href="https://github.com/nonholamilza/canone-concordato-firenze" target="_blank" class="footer-link">
+                        🔗 Repository Github
+                    </a>
+                    <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank" class="footer-link">
+                        📄 Licenza GNU v3.0
+                    </a>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>2025 Calcolatore Canone Concordato Firenze • Strumento gratuito e open source per proprietari e inquilini</p>
+                <p>⚠️ Questo strumento ha scopo informativo. Per consulenze legali consultare sempre un professionista qualificato.</p>
+            </div>
+        </div>
+    </footer>
+
+
 
     <script>
         // Coefficienti di zonizzazione
