Update link to Github

--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h4>📋 Riferimenti Normativi</h4>
-                <p>Calcoli sui parametri stabiliti dall'<a target="_blank" rel="noopener noreferrer" href="https://sociale.comune.fi.it/system/files/2025-07/Accorro%20territoriale%20Firenze%20e%20comuni%20limitrofi%20sottoscritto%20il%2003.07.2025%20e%20valido%20dal%2007.07.2025_250704_105950.pdf">Accordo Territoriale sulle locazioni abitative</a> del 03/07/2025 e dalle <a target="_blank" rel="noopener noreferrer" href="https://www.comune.firenze.it/novita/notizie/nuovi-accordi-territoriali-sulle-locazioni-abitative">agevolazioni IMU</a> del comune di Firenze.</p>
+                <p>Calcoli sui parametri agevolati stabiliti dall'<a target="_blank" rel="noopener noreferrer" href="https://sociale.comune.fi.it/system/files/2025-07/Accorro%20territoriale%20Firenze%20e%20comuni%20limitrofi%20sottoscritto%20il%2003.07.2025%20e%20valido%20dal%2007.07.2025_250704_105950.pdf">Accordo Territoriale sulle locazioni abitative</a> del 03/07/2025 e dalle <a target="_blank" rel="noopener noreferrer" href="https://www.comune.firenze.it/novita/notizie/nuovi-accordi-territoriali-sulle-locazioni-abitative">agevolazioni IMU</a> del comune di Firenze.</p>
             </div>
 
             <div class="footer-grid">
@@ -708,7 +708,7 @@
                 </p>
                 
                 <div class="footer-links">
-                    <a href="https://github.com/nonholamilza/canone-concordato-firenze" target="_blank" class="footer-link">
+                    <a href="https://github.com/nonholamilza/Calcolatore-Canone-Concordato-Firenze" target="_blank" class="footer-link">
                         🔗 Repository Github
                     </a>
                     <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank" class="footer-link">
