--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         body {
             font-family: Helvetica, Arial, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #667eea 0%, #7D1F69 100%);
             min-height: 100vh;
             padding: 0px;
         }
@@ -38,9 +38,9 @@
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(255, 255, 255, 0.8);
             border-radius: 20px;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
             backdrop-filter: blur(10px);
             overflow: hidden;
         }
@@ -161,9 +161,9 @@
         }
 
         .result-card {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #667eea 0%, #7D1F69 100%);
             color: white;
-            border-radius: 15px;
+            border-radius: 16px;
             padding: 25px;
             margin-bottom: 20px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
@@ -199,7 +199,7 @@
             background: linear-gradient(135deg, #ff6b6b 0%, #feca57 100%);
             text-align: center;
             padding: 20px;
-            border-radius: 12px;
+            border-radius: 16px;
             margin-top: 15px;
         }
 
@@ -428,7 +428,7 @@
     <div class="container">
         <div class="header">
             <h1>🏠 Calcolatore Canone Concordato</h1>
-            <p>⚜️ Comune di Firenze - Calcolo automatico del canone di locazione</p>
+            <p>⚜️ Comune di Firenze - Calcolo automatico del canone di locazione concordato</p>
         </div>
 
         <div class="content">
