--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Calcolatore Canone Concordato Firenze" />
-    <meta name="description" content="Calcola gli affitti a canone concordato per il comune di Firenze. Una calcolatrice gratuita e accessibile per stimare tasse e guadagno netto." />
+    <meta name="description" content="Calcola gli affitti a canone concordato per il comune di Firenze. Una calcolatrice gratuita e facile da usare per stimare tasse e guadagno netto." />
 
     <!-- Open Graph / Facebook / WhatsApp -->
       <meta property="og:type" content="website" />
       <meta property="og:url" content="https://nonholamilza.github.io/Calcolatore-Canone-Concordato-Firenze/" />
       <meta property="og:title" content="Calcolatore Canone Concordato Firenze" />
-      <meta property="og:description" content="Calcola gli affitti a canone concordato per Firenze. Una calcolatrice gratuita e accessibile per stimare tasse e guadagno netto." />
+      <meta property="og:description" content="Calcola gli affitti a canone concordato per Firenze. Una calcolatrice gratuita e facile da usare per stimare tasse e guadagno netto." />
       <meta property="og:image" content="https://nonholamilza.github.io/Calcolatore-Canone-Concordato-Firenze/anteprima.jpg" />
     
     <!-- Twitter -->
       <meta name="twitter:card" content="summary_large_image" />
       <meta name="twitter:url" content="https://nonholamilza.github.io/Calcolatore-Canone-Concordato-Firenze/" />
       <meta name="twitter:title" content="Calcolatore Canone Concordato Firenze" />
-      <meta name="twitter:description" content="Scopri gli affitti a canone concordato per Firenze. Una calcolatrice gratuita e accessibile per stimare tasse e guadagno netto." />
+      <meta name="twitter:description" content="Scopri gli affitti a canone concordato per Firenze. Una calcolatrice gratuita e semplice da usare per stimare tasse e guadagno netto." />
       <meta name="twitter:image" content="https://nonholamilza.github.io/Calcolatore-Canone-Concordato-Firenze/anteprima.jpg" />
 
     <title>Calcolatore Canone Concordato Firenze</title>
@@ -59,7 +59,7 @@
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
-        .header p {
+        .header h2 {
             font-size: 1.1em;
             opacity: 1;
         }
@@ -452,7 +452,7 @@
     <div class="container">
         <div class="header">
             <h1>🏠 Calcolatore Canone Concordato</h1>
-            <p>⚜️ Comune di Firenze - Calcolo automatico del canone di locazione</p>
+            <h2>⚜️ Comune di Firenze - Calcolo del canone di locazione agevolato</h2>
         </div>
 
         <div class="content">
