--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Calcolatore Canone Concordato Firenze" />
@@ -744,7 +745,7 @@
                 </p>
                 
                 <div class="footer-links">
-                    <a href="https://github.com/nonholamilza/canone-concordato-firenze" target="_blank" class="footer-link">
+                    <a href="https://github.com/nonholamilza/Calcolatore-Canone-Concordato-Firenze.git" target="_blank" class="footer-link">
                         🔗 Repository Github
                     </a>
                     <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank" class="footer-link">
